Finish project 1A